--- a/src/routes/Root/root.module.css
+++ b/src/routes/Root/root.module.css
@@ -33,6 +33,8 @@ nav > a > span {
 
 .hero > h1 {
   margin-bottom: 10px;
+  margin-left: 40px;
+  margin-right: 40px;
   text-transform: uppercase;
 }
 
